2013-08-29  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/i386/init-first.c (init1): Use
	__executable_start symbol instead of _start.

2013-08-29  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/unix/sysv/linux/ldsodefs.h (VALID_ELF_HEADER)
	(VALID_ELF_OSABI, VALID_ELF_ABIVERSION, MORE_ELF_HEADER_DATA):
	Move macros to...
	* sysdeps/gnu/ldsodefs.h: ... this new file.

	* sysdeps/unix/sysv/linux/ldsodefs.h (VALID_ELF_OSABI)
	(VALID_ELF_ABIVERSION, MORE_ELF_HEADER_DATA): Use ELFOSABI_GNU
	instead of ELFOSABI_LINUX.

	[BZ #15522] strtod ("nan(N)") returning a sNaN in some cases

	* stdlib/strtof_l.c (SET_MANTISSA): Rewrite.
	* stdlib/strtod_l.c (SET_MANTISSA): Likewise.
	* sysdeps/ieee754/ldbl-64-128/strtold_l.c (SET_MANTISSA):
	Likewise.
	* sysdeps/ieee754/ldbl-96/strtold_l.c (SET_MANTISSA): Likewise.
	* sysdeps/ieee754/ldbl-128/strtold_l.c (SET_MANTISSA): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/strtold_l.c (SET_MANTISSA):
	Likewise.
	* sysdeps/ieee754/ldbl-128ibm/ieee754.h
	(ibm_extended_long_double): Add ieee_nan member.
	* stdlib/tst-strtod6.c (test): New function, renamed from do_test.
	(do_test): New function.

	* math/basic-test.c (TEST_CONVERT): New macro, renamed from
	TEST_TRUNC.
	(convert_dfsf_test, convert_tfsf_test, convert_tfdf_test): New
	functions, renamed from truncdfsf_test, trunctfsf_test,
	trunctfdf_test.
	(convert_sfdf_test, convert_sftf_test, convert_dftf_test): New
	functions.
	(do_test): Run all these.

2013-08-29   Ondřej Bílka  <neleai@seznam.cz>

	* argp/argp-help.c: Fix typos.
	* argp/argp-parse.c: Likewise.
	* debug/backtracesyms.c: Likewise.
	* elf/elf.h: Likewise.
	* malloc/malloc.c: Likewise.
	* nis/nis_print.c: Likewise.
	* resolv/res_comp.c: Likewise.
	* stdlib/stdlib.h: Likewise.
	* sunrpc/clnt_tcp.c: Likewise.
	* sunrpc/clnt_udp.c: Likewise.
	* sunrpc/clnt_unix.c: Likewise.
	* sysdeps/unix/bsd/ptsname.c: Likewise.
	* sysdeps/unix/sysv/linux/ifaddrs.c: Likewise.