@@ -1,3 +1,9 @@
+2013-08-29  Thomas Schwinge  <thomas@codesourcery.com>
+	    Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/mach/hurd/errnos.awk (BEGIN): Emit ESUCCESS.
+	* sysdeps/mach/hurd/bits/errno.h: Regenerate.
+
 2013-08-29  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
 	* sysdeps/mach/hurd/i386/init-first.c (init1): Use
